# metaforge

./: .gitignore  Cargo.toml  README  README.md  bacon.toml  dir.rs
benches/: build_dir.rs  build_metafile.rs  build_site.rs  dir.rs  file.rs  map_dir.rs  pandoc.rs  parallel.rs
src/: builder.rs  dir.rs  error.rs  filetype.rs  lib.rs  main.rs  meta.pest  metafile.rs  options.rs  parallel.rs  parser.rs  tests.rs
src/builder/: array.rs  pattern.rs  source.rs  tests.rs  variable.rs
src/filetype/: builder.rs  metafile.rs  structs.rs
src/metafile/: dir.rs  file.rs  header.rs  scope.rs  tests.rs
src/metafile/dir/: node.rs
src/metafile/file/: arrays.rs  attributes.rs  patterns.rs  source.rs  variables.rs
src/options/: arg_parser.rs  opt_struct.rs
src/parser/: array.rs  def_block.rs  header.rs  meta.pest  parse.rs  source.rs  tests.rs
src/tests/: test_metafile.rs  test_parser.rs
src/tests/test_files/: expanded  test_expanded
tests/: build_dir.rs  metafile_builder.rs  readme.rs
tests/files/: expanded
