[package]
name = "metaforge"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
pandoc = "0.8"
color-eyre =  { version = "0.5", default-features = false }
walkdir = "2"
pest = "2"
pest_derive = "2"

[dev-dependencies]
pretty_assertions = "1"
criterion = "0.4"

[[bench]]
name = "build_site"
harness = false
